--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__subtitle_active-link">Узнать &#8594</a></p>
+        <a href="#" class="header__subtitle_active-link">Узнать &#8594;</a></p>
       <div class="header__square-pic"></div>
-      <img src="./images/header-image.png" alt="Фрагмент картины Опять двойка" class="header__main-illustration"></img>
+      <img src="./images/header-image.png" alt="Фрагмент картины Опять двойка" class="header__main-illustration">
     </header>
     <main class="content">
       <div class="description">
@@ -75,8 +75,8 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть</h3>
-        <a href="#" class="feynman__link">Подробнее &#8594</a>
-        <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration"></img>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration">
       </section>
       <section class="kaufman">
         <h2 class="section-title__theme_dark">Принципы обучения</h2>
@@ -122,14 +122,15 @@
             <h3 class="table__heading_theme_dark">10</h3>
             <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
-          <img src="./images/kaufman-triangle.svg " class="kaufman__triangle"></img>
+          <img src="./images/kaufman-triangle.svg" class="kaufman__triangle">
+        </ul>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">&copy Виктор Абанькин</div>
+          <div class="footer__author">&copy; Виктор Абанькин</div>
         </div>
         <div class="footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
