--- a/index.html
+++ b/index.html
@@ -4,10 +4,152 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
-
+    <header class="header">
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__subtitle_active-link">Узнать &#8594;</a></p>
+      <div class="header__square-pic"></div>
+      <img src="./images/header-image.png" alt="Фрагмент картины Опять двойка" class="header__main-illustration">
+    </header>
+    <main class="content">
+      <div class="description">
+        <div class="two-column">
+          <div class="two-column__brief">Главные проблемы в обучении</div>
+          <div class="two-column__main-text">
+            <p class="two-column__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+              Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но
+              часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-column__span-accant"><span class="span-accant">Вывод: </span>учиться тоже нужно уметь,
+              но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-column__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </div>
+      <section class="digits">
+        <h2 class="section-title__theme_white">Цифры и факты</h2>
+        <h3 class="section-subtitle__theme_white">Про учёбу и мозг</h3>
+        <ul class="table__theme_white">
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">86 миллиардов</h3>
+            <p class="table__text_theme_white">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">2.1 миллиарда</h3>
+            <p class="table__text_theme_white">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text_theme_white">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">1000 терабайт</h3>
+            <p class="table__text_theme_white">Объём памяти человека</p>
+          </li>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">500 триллионов</h3>
+            <p class="table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">420 миллионов</h3>
+            <p class="table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text_theme_white">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">17–20 лет</h3>
+            <p class="table__text_theme_white">Пик обучаемости</p>
+          </li>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">1885 год</h3>
+            <p class="table__text_theme_white">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">1889 год</h3>
+            <p class="table__text_theme_white">Открытие условного рефлекса</p>
+          </li>
+        </ul>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration">
+      </section>
+      <section class="kaufman">
+        <h2 class="section-title__theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle__theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table__theme_dark">
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">1</h3>
+            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">2</h3>
+            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">3</h3>
+            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">4</h3>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">5</h3>
+            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">6</h3>
+            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">7</h3>
+            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">8</h3>
+            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">9</h3>
+            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">10</h3>
+            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+          <img src="./images/kaufman-triangle.svg" class="kaufman__triangle">
+        </ul>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <div class="footer__author">&copy; Виктор Абанькин</div>
+        </div>
+        <div class="footer__column_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" class="footer__social-icon">YouTube</a>
+            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon">ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" class="footer__social-icon">TikTok</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
