--- a/index.html
+++ b/index.html
@@ -13,141 +13,141 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__subtitle_active-link">Узнать &#8594;</a></p>
+        <a href="#" class="header__link">Узнать &#8594;</a></p>
       <div class="header__square-pic"></div>
       <img src="./images/header-image.png" alt="Фрагмент картины Опять двойка" class="header__main-illustration">
     </header>
     <main class="content">
-      <div class="description">
-        <div class="two-column">
-          <div class="two-column__brief">Главные проблемы в обучении</div>
-          <div class="two-column__main-text">
-            <p class="two-column__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+      <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но
               часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-column__span-accant"><span class="span-accant">Вывод: </span>учиться тоже нужно уметь,
+            <p class="two-columns__paragraph"><span class="two-columns__span-accant">Вывод: </span>учиться тоже нужно уметь,
               но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-column__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
-      </div>
+      </section>
       <section class="digits">
-        <h2 class="section-title__theme_white">Цифры и факты</h2>
-        <h3 class="section-subtitle__theme_white">Про учёбу и мозг</h3>
-        <ul class="table__theme_white">
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">86 миллиардов</h3>
-            <p class="table__text_theme_white">Число нейронов в мозге человека</p>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">2.1 миллиарда</h3>
-            <p class="table__text_theme_white">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text_theme_white">Всемирный Банк, 2017</p>
+          <li class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">1000 терабайт</h3>
-            <p class="table__text_theme_white">Объём памяти человека</p>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">500 триллионов</h3>
-            <p class="table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">420 миллионов</h3>
-            <p class="table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text_theme_white">Всемирный Банк, 2017</p>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">17–20 лет</h3>
-            <p class="table__text_theme_white">Пик обучаемости</p>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">1885 год</h3>
-            <p class="table__text_theme_white">Открытие кривой забывания</p>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">1889 год</h3>
-            <p class="table__text_theme_white">Открытие условного рефлекса</p>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
         <a href="#" class="feynman__link">Подробнее &#8594;</a>
         <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration">
       </section>
       <section class="kaufman">
-        <h2 class="section-title__theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle__theme_dark">от Джоша Кауфмана</h3>
-        <ul class="table__theme_dark">
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">1</h3>
-            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+        <h2 class="section-title section-title__theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle__theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table__theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">1</h3>
+            <p class="table__text">Выберите привлекательный проект.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">2</h3>
-            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">2</h3>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">3</h3>
-            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">3</h3>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">4</h3>
-            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">4</h3>
+            <p class="table__text">Разбейте навык на элементы.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">5</h3>
-            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">5</h3>
+            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">6</h3>
-            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">6</h3>
+            <p class="table__text">Устраните препятствия для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">7</h3>
-            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">7</h3>
+            <p class="table__text">Выделите специальное время для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">8</h3>
-            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">8</h3>
+            <p class="table__text">Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">9</h3>
-            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">9</h3>
+            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">10</h3>
-            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">10</h3>
+            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
-          <img src="./images/kaufman-triangle.svg" class="kaufman__triangle">
         </ul>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">&copy; Виктор Абанькин</div>
+          <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
-        <div class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
-          </div>
-        </div>
-        <div class="footer__column_content_social">
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link">Главная</a></li>
+            <li><a href="#" class="footer__column-link">Концепция</a></li>
+            <li><a href="#" class="footer__column-link">Наставники</a></li>
+          </ul>
+        </nav>
+        <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" class="footer__social-icon">YouTube</a>
-            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" class="footer__social-icon">TikTok</a>
-          </div>
-        </div>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt=" " class="footer__social-icon">YouTube</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt=" " class="footer__social-icon">ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt=" " class="footer__social-icon">TikTok</a></li>
+          </ul>
+        </nav>
       </div>
     </footer>
   </div>
