--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="YouTube" class="footer__social-icon">YouTube</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="TikTok" class="footer__social-icon">TikTok</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="иконка YouTube" class="footer__social-icon">YouTube</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="иконка ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="иконка TikTok" class="footer__social-icon">TikTok</a></li>
           </ul>
         </nav>
       </div>
