--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration">
       </section>
       <section class="kaufman">
-        <h2 class="section-title section-title__theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle__theme_dark">от Джоша Кауфмана</h3>
-        <ul class="table table__theme_dark">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">1</h3>
             <p class="table__text">Выберите привлекательный проект.</p>
