--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="page/index.css">
 </head>
 <body>
   <div class="page">
@@ -13,30 +12,89 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__subtitle_active-link">Узнать &#8594;</a></p>
-      <div class="header__square-pic"></div>
+        <a href="#" class="header__subtitle_active-link link-opacity">Узнать &#8594;</a></p>
+      <div class="header__square-pic rotation"></div>
       <img src="./images/header-image.png" alt="Фрагмент картины Опять двойка" class="header__main-illustration">
     </header>
     <main class="content">
-      <div class="description">
-        <div class="two-column">
-          <div class="two-column__brief">Главные проблемы в обучении</div>
-          <div class="two-column__main-text">
-            <p class="two-column__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+      <section class="description content__description">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но
               часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-column__span-accant"><span class="span-accant">Вывод: </span>учиться тоже нужно уметь,
+            <p class="two-columns__span-accant"><span class="span-accant">Вывод: </span>учиться тоже нужно уметь,
               но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-column__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
-      </div>
-      <section class="digits">
-        <h2 class="section-title__theme_white">Цифры и факты</h2>
-        <h3 class="section-subtitle__theme_white">Про учёбу и мозг</h3>
-        <ul class="table__theme_white">
-          <li class="table__cell_theme_white">
+      </section>
+      <section class="techniques content__techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <ul class="cards">
+          <li class="cards__item">
+            <img src="./images/cards-attention.png" alt="Фото книги в руках человека" class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-recall.png" alt="Фото скульптуры" class="cards__image">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-interliving.png" alt="Фото множества людей внутри большого здания" class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-question.png" alt="Фото человека в четырех стенах" class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-competence.png" alt="Фото стопки книг, лежащей на ладони" class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video content__video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <div class="video__iframes">
+          <iframe id="ytplayer1" class="video__iframe"
+          src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe id="ytplayer2" class="video__iframe"
+          src="https://www.youtube.com/embed/0u3bccaRmmg" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley content__oakley">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">История Барбары Оакли.</h3>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
+              причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её
+              выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
+              подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже,
+              чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a href="#" class="feynman__link link-opacity">Подробнее &#8594;</a>
+        <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration">
+      </section>
+      <section class="digits content__digits">
+        <h2 class="section-title section-title__theme_white">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle__theme_white">Про учёбу и мозг</h3>
+        <ul class="table table__theme_white">
+          <li class="table__cell table__cell_theme_white">
             <h3 class="table__heading_theme_white">86 миллиардов</h3>
             <p class="table__text_theme_white">Число нейронов в мозге человека</p>
           </li>
@@ -72,16 +130,25 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
-        <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration">
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+            Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить
+            навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" alt="Обложка книги Саламана Хана" class="khan__book-pic">
+            <a href="#" class="khan__buy-link link-opacity">Купить книгу &#8594;</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
-        <h2 class="section-title__theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle__theme_dark">от Джоша Кауфмана</h3>
-        <ul class="table__theme_dark">
+        <h2 class="section-title section-title__theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle__theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table__theme_dark">
           <li class="table__cell_theme_dark">
             <h3 class="table__heading_theme_dark">1</h3>
             <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -122,9 +189,27 @@
             <h3 class="table__heading_theme_dark">10</h3>
             <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
-          <img src="./images/kaufman-triangle.svg" class="kaufman__triangle">
         </ul>
+        <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle rotation">
       </section>
+      <nav class="resources content__resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+          <a href="#" class="resources__link link-opacity">
+            <img src="./images/resources-arzamas.svg" alt="Логотип Arzamas" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link link-opacity">
+            <img src="./images/resources-n1.svg" alt="Логотип N+1" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link link-opacity">
+            <img src="./images/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link link-opacity">
+            <img src="./images/resources-polka.svg" alt="Логотип Полка" class="resources__logo">
+          </a>
+        </div>
+      </nav>
     </main>
     <footer class="footer">
       <div class="footer__columns">
@@ -135,17 +220,17 @@
         <div class="footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <div class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
+            <a href="#" class="footer__column-link link-opacity">Главная</a>
+            <a href="#" class="footer__column-link link-opacity">Концепция</a>
+            <a href="#" class="footer__column-link link-opacity">Наставники</a>
           </div>
         </div>
         <div class="footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" class="footer__social-icon">YouTube</a>
-            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" class="footer__social-icon">TikTok</a>
+            <a href="#" class="footer__column-link link-opacity"><img src="./images/youtube-icon.svg" alt="Логотип YouTube" class="footer__social-icon">YouTube</a>
+            <a href="#" class="footer__column-link link-opacity"><img src="./images/vk_color_white.svg" alt="Логотип ВКонтакте" class="footer__social-icon">ВКонтакте</a>
+            <a href="#" class="footer__column-link link-opacity"><img src="./images/tiktok-icon.svg" alt="Логотип TikTok" class="footer__social-icon">TikTok</a>
           </div>
         </div>
       </div>
