--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__subtitle_active-link link-opacity">Узнать &#8594;</a></p>
+        <a href="#" class="header__link link-opacity">Узнать &#8594;</a></p>
       <div class="header__square-pic rotation"></div>
       <img src="./images/header-image.png" alt="Фрагмент картины Опять двойка" class="header__main-illustration">
     </header>
@@ -91,9 +91,9 @@
         <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration">
       </section>
       <section class="digits content__digits">
-        <h2 class="section-title section-title__theme_white">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle__theme_white">Про учёбу и мозг</h3>
-        <ul class="table table__theme_white">
+        <h2 class="section-title section-title_theme_white">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle_theme_white">Про учёбу и мозг</h3>
+        <ul class="table table_theme_white">
           <li class="table__cell table__cell_theme_white">
             <h3 class="table__heading_theme_white">86 миллиардов</h3>
             <p class="table__text_theme_white">Число нейронов в мозге человека</p>
@@ -146,9 +146,9 @@
         </div>
       </section>
       <section class="kaufman">
-        <h2 class="section-title section-title__theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle__theme_dark">от Джоша Кауфмана</h3>
-        <ul class="table table__theme_dark">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table_theme_dark">
           <li class="table__cell_theme_dark">
             <h3 class="table__heading_theme_dark">1</h3>
             <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
