--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но
               часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph"><span class="two-columns__span-accant">Вывод: </span>учиться тоже нужно уметь,
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь,
               но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
@@ -92,7 +92,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
         <a href="#" class="feynman__link link">Подробнее &#8594;</a>
-        <div class="feynman__illustration"></div>
+        <img src="./images/feynman.png" alt="Портрет Фейнмана" class="feynman__illustration">
       </section>
       <section class="digits content__digits">
         <h2 class="section-title section-title_theme_white">Цифры и факты</h2>
